GearsetPOC/force-app/main/default/objects/Booking__c/Booking__c.object-meta.xml
<CustomObject>
    <description>Booking consisting of all tickets sharing a PNR. 
The name associated with the booking will be the lead passenger&#39;s one. 
Booking has been assigned as an External ID for Ticket.</description>
    <label>Booking</label>
    <nameField>
        <label>Booking Reference</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>