GearsetPOC/force-app/main/default/objects/Booking__c/fields/Booker__c.field-meta.xml
<CustomField>
    <fullName>Booker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booker</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>