GearsetPOC/force-app/main/default/objects/Booking__c/fields/Booker_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Booker_Address_City__c</fullName>
    <label>Booker Address City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>