GearsetPOC/force-app/main/default/objects/Booking__c/fields/Booker_Address_PostCode__c.field-meta.xml
<CustomField>
    <fullName>Booker_Address_PostCode__c</fullName>
    <label>Booker Address PostCode</label>
    <length>80</length>
    <type>Text</type>
</CustomField>