GearsetPOC/force-app/main/default/objects/Booking__c/fields/Booker_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>Booker_Address_Street__c</fullName>
    <label>Booker Address Street</label>
    <length>200</length>
    <type>Text</type>
</CustomField>