GearsetPOC/force-app/main/default/objects/Booking__c/fields/Booker_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Booker_FirstName__c</fullName>
    <label>Booker FirstName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>