GearsetPOC/force-app/main/default/objects/Booking__c/fields/Booker_LastName__c.field-meta.xml
<CustomField>
    <fullName>Booker_LastName__c</fullName>
    <label>Booker LastName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>