GearsetPOC/force-app/main/default/objects/Booking__c/fields/Booker_PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>Booker_PhoneNumber__c</fullName>
    <label>Booker PhoneNumber</label>
    <type>Phone</type>
</CustomField>