GearsetPOC/force-app/main/default/objects/Booking__c/fields/Booker_Title__c.field-meta.xml
<CustomField>
    <fullName>Booker_Title__c</fullName>
    <label>Booker Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>