GearsetPOC/force-app/main/default/objects/Booking__c/fields/Booking_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Booking_DateTime__c</fullName>
    <label>Booking DateTime</label>
    <type>DateTime</type>
</CustomField>