GearsetPOC/force-app/main/default/objects/Booking__c/fields/Booking_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>Booking_IP_Address__c</fullName>
    <label>Booking IP Address</label>
    <length>20</length>
    <type>Text</type>
</CustomField>