GearsetPOC/force-app/main/default/objects/Booking__c/fields/Booking_Status__c.field-meta.xml
<CustomField>
    <fullName>Booking_Status__c</fullName>
    <description>Status of the package in the booking.</description>
    <inlineHelpText>Sqills Booking Package Status.</inlineHelpText>
    <label>Booking Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>