GearsetPOC/force-app/main/default/objects/Booking__c/fields/JAC_Travel_Ref__c.field-meta.xml
<CustomField>
    <fullName>JAC_Travel_Ref__c</fullName>
    <label>JAC Travel Ref</label>
    <length>80</length>
    <type>Text</type>
</CustomField>