GearsetPOC/force-app/main/default/objects/Booking__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <label>Market</label>
    <length>80</length>
    <type>Text</type>
</CustomField>