GearsetPOC/force-app/main/default/objects/Booking__c/fields/OASSIS_Audit_Ref__c.field-meta.xml
<CustomField>
    <fullName>OASSIS_Audit_Ref__c</fullName>
    <label>OASSIS Audit Ref</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>