GearsetPOC/force-app/main/default/objects/Booking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Booking_DateTime__c</columns>
    <columns>Distribution_Channel__c</columns>
    <columns>OASSIS_Audit_Ref__c</columns>
    <columns>Booker__c</columns>
    <columns>Booker_Email__c</columns>
    <columns>Booking_Amount__c</columns>
    <columns>Booking_Currency__c</columns>
    <columns>PNR__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>